# pokedex

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 0615858b5256_add_pokemon_and_types.py
scripts/: import_pokemon.py  import_types.py  pokemon.csv
src/app/: main.py
src/app/core/: config.py  db.py
src/app/pokemon/: models.py  query.py  schemas.py
src/app/types/: models.py
tests/: conftest.py  test_main.py
